refactor code get tick from RTC optimize boot queue optimize button interface

--- a/Software/Nixie/platformio.ini
+++ b/Software/Nixie/platformio.ini
@@ -16,8 +16,9 @@ monitor_speed = 115200
 board_build.partitions = min_spiffs.csv
 lib_deps = 
   bblanchon/ArduinoJson
-  https://github.com/me-no-dev/AsyncTCP.git
-  https://github.com/esphome/ESPAsyncWebServer.git
+  https://github.com/fbiego/ESP32Time.git
+;  https://github.com/me-no-dev/AsyncTCP.git
+;  https://github.com/esphome/ESPAsyncWebServer.git
 board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 lib_ldf_mode=deep
@@ -26,7 +27,7 @@ lib_ldf_mode=deep
 ;upload_protocol = espota
 ;upload_port = "192.168.0.209"
 upload_port = /dev/ttyUSB*
-export PLATFORMIO_UPLOAD_PORT=upload_port
+;export PLATFORMIO_UPLOAD_PORT=upload_port
   
   
 [env:esp32dev-debug]
